Slave code for MSP

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EGR326_Final_Project</name>
+	<name>UART_Bitch</name>
 	<comment></comment>
 	<projects>
 	</projects>
